--- a/client/views/feed.html
+++ b/client/views/feed.html
@@ -2,20 +2,25 @@
 <html>
   <head>
     <title>FoxChatter Newsfeed</title>
+    <link rel="stylesheet" type="text/css" href="/css/global.css">
+    <link rel="stylesheet" type="text/css" href="/css/feed.css">
     <meta charset="utf-8"/>
-
   </head>
   <body>
     <header>
       <!--Site Name-->
       FoxChatter
+      <div id ="redfox">
+        <img src = "images/redfox.png" alt = "redfox" width = "50" height = "50">
+      </div>
       <!--MyMarist Portal-->
-      <div id="portal_button">
-        
+      <div id="portal_button"> 
+        myMarist
       </div>
     </header>
-    <main>
 
+    <main>
+      <div id="newsfeed"> Feed will go here</div>
     </main>
     <footer>
       <p id="site_info">Copyright &copy; 2020: Marist College est. 1929</p>
