--- a/client/public/css/feed.css
+++ b/client/public/css/feed.css
@@ -9,7 +9,7 @@ header {
 	justify-content: space-between;
 	align-items: center;
 
-	background-color: red;
+	background-color: rgb(255, 132, 191);
 	font-size: 30px;
 	color: white;
 }
@@ -25,7 +25,7 @@ footer {
 	left: 0px;
   bottom: 0px;
 	width: 100%;
-	background-color: red;
+	background-color: rgb(255, 132, 191);
 	text-align: center;
 	font-size: 20px;
 }
@@ -37,7 +37,7 @@ footer {
 }
 
 a {
-	color: blue;
+	color: rgb(255, 171, 227);
 	text-decoration: none;
 }
 
