--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -1,5 +1,9 @@
 body {
-	
+	  background-image: url("campus.png");
+    background-color: #ffffff;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
 }
 
 #splash_title {
