--- a/client/views/feed.html
+++ b/client/views/feed.html
@@ -1,21 +1,21 @@
 <!doctype html>
 <html>
   <head>
-    <title>FoxChatter Newsfeed</title>
     <link rel="stylesheet" type="text/css" href="/css/global.css">
     <link rel="stylesheet" type="text/css" href="/css/feed.css">
+    <title>FoxChatter Newsfeed</title>
     <meta charset="utf-8"/>
   </head>
   <body>
     <header>
       <!--Site Name-->
       FoxChatter
-      <div id ="redfox">
-        <img src = "images/redfox.png" alt = "redfox" width = "50" height = "50">
-      </div>
       <!--MyMarist Portal-->
+      <marquee direction="left"></marquee>
+      <img src = "images/redfox.png" width = "50" height = "50"></img>
+      myMarist
       <div id="portal_button"> 
-        myMarist
+        
       </div>
     </header>
 
