--- a/client/views/index.html
+++ b/client/views/index.html
@@ -5,10 +5,15 @@
       <link rel="stylesheet" type="text/css" href="/css/global.css">
       <link rel="stylesheet" type="text/css" href="/css/index.css">
   </head>
+  <style>
+    body  {
+      background-image: url("images/campus.png");
+      background-color: #ffffff;
+    }
+  </style>
   <body>
       <h1 id="splash_title">FoxChatter</h1>
       <p class="menu_button background_button" id="fade_text">Press SPACE BAR to get started</p>
-
       <script src="/js/global.js"></script>
       <script src="/js/index.js"></script>
   </body>
