--- a/client/views/feed.html
+++ b/client/views/feed.html
@@ -3,8 +3,8 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/css/global.css">
     <link rel="stylesheet" type="text/css" href="/css/feed.css">
-    <title>FoxChatter Newsfeed</title>
     <meta charset="utf-8"/>
+    <title>FoxChatter Newsfeed</title>
   </head>
   <body>
     <header>
@@ -13,7 +13,7 @@
       <!--MyMarist Portal-->
       <marquee direction="left"></marquee>
       <img src = "images/redfox.png" width = "50" height = "50"></img>
-      myMarist
+      MyMarist
       <div id="portal_button"> 
         
       </div>
@@ -25,6 +25,7 @@
     <footer>
       <p id="site_info">Copyright &copy; 2020: Marist College est. 1929</p>
     </footer>
+    <script src = "/js/feed.js"></script>
 
   </body>
 </html>
