--- a/client/views/index.html
+++ b/client/views/index.html
@@ -4,6 +4,10 @@
       <title>FoxChatter</title>
       <link rel="stylesheet" type="text/css" href="/css/global.css">
       <link rel="stylesheet" type="text/css" href="/css/index.css">
+      
+        <meta charset ="utf-8">
+      <meta name="viewport" content ="width=device-width,initial-scale=1.0">
+      <title> Index Page </title>
   </head>
   <style>
     body  {
@@ -14,6 +18,7 @@
   <body>
       <h1 id="splash_title">FoxChatter</h1>
       <p class="menu_button background_button" id="fade_text">Press SPACE BAR to get started</p>
+      
       <script src="/js/global.js"></script>
       <script src="/js/index.js"></script>
   </body>
