--- a/client/public/css/feed.css
+++ b/client/public/css/feed.css
@@ -1,4 +1,7 @@
 header {
+
+	font-family: "Playwrite AU TAS", cursive;
+	font-weight: 150px;
 	position: fixed;
 	left:0px;
 	top: 0px;
@@ -6,26 +9,29 @@ header {
 	width: 100%;
 
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 
-	background-color: rgb(255, 132, 191);
+	background-color: rgb(255, 156, 225);
 	font-size: 30px;
-	color: white;
+	font-style: italic;
+	color: rgb(0, 0, 0);
 }
 
 main {
+	font-family: "Playwrite AU TAS", cursive;
+	font-weight: 150px;
 	display: grid;
 	padding-top: 60px;
 	justify-content: center;
 }
 
 footer {
-	position: absolute;
+	position: down;
 	left: 0px;
-  bottom: 0px;
+    bottom: 0pxpx;
 	width: 100%;
-	background-color: rgb(255, 132, 191);
+	background-color: rgb(255, 156, 225);
 	text-align: center;
 	font-size: 20px;
 }
@@ -37,7 +43,7 @@ footer {
 }
 
 a {
-	color: rgb(255, 171, 227);
+	color: rgb(0, 0, 0);
 	text-decoration: none;
 }
 
@@ -51,9 +57,13 @@ a {
 #newsfeed {
 	max-width: 600px;
 	min-width: 600px;
+	text-align: center;
 }
 
-.feedImage {
-	max-width: 150px;
-	max-height: 150px;
+
+
+#feedImage {
+	max-width: 50px;
+	max-height: 50px;
+	text-align: center;
 }
