--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -1,5 +1,5 @@
 body {
-	  background-image: url("campus.png");
+	background-image: url("campus.png");
     background-color: #ffffff;
     background-repeat: no-repeat;
     background-position: center center;
@@ -7,16 +7,17 @@ body {
 }
 
 #splash_title {
-	width: 100%;
-  font-size: 100px;
-  color: red;
-  opacity: 0.85;
-  text-shadow: 4px 4px 4px rgba(255, 255, 255);
-  text-align: center;
+    font-family: "Playwrite AU TAS", cursive;
+    width: 100%;
+    font-size: 100px;
+    color: rgb(255, 255, 255);
+    opacity: 0.85;
+    text-shadow: 4px 4px 4px rgba(255, 255, 255);
+    text-align: center;
 }
 
 .menu_button {
-	background-color: rgba(255, 0, 0, 0.5);
+	background-color: rgba(255, 84, 201, 0.5);
     font-size: 28px;
     color: white;
     cursor: pointer;
