--- a/client/views/feed.html
+++ b/client/views/feed.html
@@ -1,21 +1,31 @@
 <!doctype html>
 <html>
   <head>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Playwrite+AU+TAS:wght@100..400&display=swap');
+    </style>
     <link rel="stylesheet" type="text/css" href="/css/global.css">
     <link rel="stylesheet" type="text/css" href="/css/feed.css">
-    <meta charset="utf-8"/>
     <title>FoxChatter Newsfeed</title>
+    <meta charset="utf-8"/>
   </head>
+  <style>
+    body  {
+      background-image: url("images/pink2.png");
+      background-color: #ffffff;
+      
+    }
+  </style>
   <body>
     <header>
       <!--Site Name-->
       FoxChatter
       <!--MyMarist Portal-->
-      <marquee direction="left"></marquee>
+      <marquee direction = "left"></marquee>
       <img src = "images/redfox.png" width = "50" height = "50"></img>
-      MyMarist
+       <h2><a class = 'myClass' href = "https://www.marist.edu/">MyMarist</a></h2>
       <div id="portal_button"> 
-        
+  
       </div>
     </header>
 
@@ -25,7 +35,7 @@
     <footer>
       <p id="site_info">Copyright &copy; 2020: Marist College est. 1929</p>
     </footer>
-    <script src = "/js/feed.js"></script>
-
+    <script src ="/js/global.js"></script>
+    <script src ="/js/feed.js"></script>
   </body>
 </html>
