--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,17 +1,20 @@
 <!doctype html>
 <html>
   <head>
-      <title>FoxChatter</title>
-      <link rel="stylesheet" type="text/css" href="/css/global.css">
-      <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Playwrite+AU+TAS:wght@100..400&display=swap');
+    </style>
       
-        <meta charset ="utf-8">
-      <meta name="viewport" content ="width=device-width,initial-scale=1.0">
-      <title> Index Page </title>
+    <title>FoxChatter</title>
+    <link rel="stylesheet" type="text/css" href="/css/global.css">
+    <link rel="stylesheet" type="text/css" href="/css/index.css">  
+    <meta charset ="utf-8">
+    <meta name="viewport" content ="width=device-width,initial-scale=1.0">
+    <title> Index Page </title>
   </head>
   <style>
     body  {
-      background-image: url("images/campus.png");
+      background-image: url("images/image.png");
       background-color: #ffffff;
     }
   </style>
